fixed dynamic positioning of game-modal to be centered on grid by moving it into the grid object and setting align and justify-self to center

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ body {
     width: var(--width);
     height: var(--height);
     position: absolute;
-    left: calc(50vw - calc(var(--width) / 2));
-    bottom: calc(50vh - calc(var(--height) / 2) + 20px);
+    align-self: center;
+    justify-self: center;
     background-color: whitesmoke;
     border-radius: 20px;
     padding-top: 20px;
@@ -134,6 +134,7 @@ body {
     grid-template: repeat(3,calc((var(--side-length) - 2 * var(--gap)) / 3)) / repeat(3,calc((var(--side-length) - 2 * var(--gap)) / 3));
     box-sizing: border-box;
     background-color: black;
+    position: relative;
 }
 
 .grid-box {
